changing language developed

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,5 +8,8 @@
   "email":"Email",
   "password":"password",
   "personalInfo":"Personal Information",
-  "save":"Save"
+  "save":"Save",
+  "changelan":"Change Language",
+  "en":"English",
+  "fa":"Persian"
 }
