--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -8,5 +8,8 @@
   "email":"ایمیل",
   "password":"رمز عبور",
   "personalInfo":"اطلاعات شخصی",
-  "save":"دخیره"
+  "save":"دخیره",
+  "changelan":"تغییر زبان",
+  "en":"انگلیسی",
+  "fa":"فارسی"
 }
